# velacritty

./: .gitignore  .pre-commit-config.yaml  AUTOSCROLL_IMPLEMENTATION_COMPLETE.md  AUTOSCROLL_TEST_RESULTS.md  CHANGELOG.md  COMPLETE_VALIDATION_REPORT.md  COMPLETE_VIEWPORT_LOCK_FINAL.md  CONFIG_AUTO_GENERATION_COMPLETE.md  CONTRIBUTING.md  Cargo.toml  ICON_EXPORT_PROCESS.md  ICON_REBRAND_COMPLETE.txt  INSTALL.md  MIGRATION.md  Makefile  NOTICE  PHASE3_DISCOVERY.md  PRE_COMMIT_INTEGRATION_COMPLETE.md  README.md  REBRAND_COMPLETION_AUDIT.md  SESSION_STATUS.md  check_implementation.sh  test_auto_scroll.sh  test_auto_scroll_diagnostic.sh  test_complete_viewport_lock.sh  verify_behavior.sh
.builds/: freebsd.yml  linux.yml
.github/workflows/: ci.yml  pre-commit.yml  release.yml
alacritty/: Cargo.toml
alacritty/src/: cli.rs  event.rs  logging.rs  main.rs  message_bar.rs  panic.rs  window_context.rs
alacritty_config/: Cargo.toml
alacritty_config_derive/: Cargo.toml
alacritty_terminal/: Cargo.toml
alacritty_terminal/tests/: ref.rs
docs/: PATH_A_INFRASTRUCTURE.md  ROADMAP.md  SDD.md  WSL2_RESIZE_FIX.md
extra/: velacritty.info
extra/completions/: _alacritty  _velacritty  alacritty.fish  velacritty.bash  velacritty.fish
extra/linux/: Alacritty.desktop  Velacritty.desktop  org.alacritty.Alacritty.appdata.xml  org.velacritty.Velacritty.appdata.xml
extra/man/: alacritty-bindings.5.scd  (+3 more)
scripts/: generate-icons.sh
velacritty/: Cargo.toml  build.rs
velacritty_config/: Cargo.toml
velacritty_config/src/: lib.rs
velacritty_config_derive/: Cargo.toml
(+106 files in other folders)
