[package]
name = "velacritty_config"
version = "0.2.4-dev"
authors = ["Christian Duerr <contact@christianduerr.com>", "Dayton Mills <CoderDayton@proton.me>"]
license = "MIT OR Apache-2.0"
description = "Velacritty configuration abstractions (fork of Alacritty)"
homepage = "https://github.com/CoderDayton/alacritty"
repository = "https://github.com/CoderDayton/alacritty"
edition.workspace = true
rust-version.workspace = true

[dependencies]
log = { version = "0.4.17", features = ["serde"] }
serde = "1.0.163"
toml.workspace = true

[dev-dependencies]
velacritty_config_derive = { version = "0.2.6-dev", path = "../alacritty_config_derive" }
serde = { version = "1.0.163", features = ["derive"] }
